--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button" href="https://forms.gle/TNfbuEDAcsoDZ1WM6">Signups</a>
-        <a class="button" href="https://www.paypal.me/ddrillini/10">Payment</a>
+        <a class="button button-primary" href="https://forms.gle/TNfbuEDAcsoDZ1WM6">Signups</a>
+        <a class="button button-primary" href="https://www.paypal.me/ddrillini">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1a0jV1BJrFdVZ3_Hr6-Ran_OWO6hXh2ewLQmN9wKakYY/edit?usp=sharing">Schedule</a>
         <br><br>
-		<a class="button" href="">Couples Standings</a>
-		<br><br> 
+		
         <a class="button button-primary" href="https://multistre.am/mutesauce/cartertheq/layout0/">Multistream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
         <a class="button button-primary" href="https://twitch.tv/mutesauce">Lower Stream</a>
         <br><br>
-        <a class="button" href="">Upper Bracket</a>
-	<a class="button" href="">Lower Bracket</a>
+        <a class="button button-primary" href="">Upper Bracket</a>
+	<a class="button button-primary" href="https://challonge.com/yv8r28n5">Lower Bracket</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1l7jo2jCSgRpP7g1Nr5Pj_4z6FUxYGnpGZF55A0k1ceQ/edit?usp=sharing">Qualifier/Singles Pools</a>
 <br>
 	<a class="button" href="">Mods SRT Score Sheet</a>
 	<a class="button" href="">Mods SRT Bracket</a>
+	<a class="button" href="">Couples Standings</a>
+	      
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
