--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
         <a class="button button-primary" href="https://twitch.tv/mutesauce">Lower Stream</a>
         <br><br>
-        <a class="button button-primary" href="">Upper Bracket</a>
+        <a class="button button-primary" href="https://challonge.com/50o7aqyh">Upper Bracket</a>
 	<a class="button button-primary" href="https://challonge.com/yv8r28n5">Lower Bracket</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1l7jo2jCSgRpP7g1Nr5Pj_4z6FUxYGnpGZF55A0k1ceQ/edit?usp=sharing">Qualifier/Singles Pools</a>
 <br>
