--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <br><br>
 		
         <a class="button button-primary" href="https://multistre.am/mutesauce/cartertheq/layout0/">Multistream</a>
-        <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
-        <a class="button button-primary" href="https://twitch.tv/mutesauce">Lower Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/mutesauce">Upper Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
         <br><br>
         <a class="button button-primary" href="https://challonge.com/50o7aqyh">Upper Bracket</a>
 	<a class="button button-primary" href="https://challonge.com/yv8r28n5">Lower Bracket</a>
