--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<a class="button button-primary" href="https://challonge.com/yv8r28n5">Lower Bracket</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1l7jo2jCSgRpP7g1Nr5Pj_4z6FUxYGnpGZF55A0k1ceQ/edit?usp=sharing">Qualifier/Singles Pools</a>
 <br>
-	<a class="button" href="">Mods SRT Score Sheet</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1rk4JbKOnQBxAhL9DIPNaFQL018bn0krcCX_ttYe5yvk/edit">Mods SRT Score Sheet</a>
 	<a class="button" href="">Mods SRT Bracket</a>
 	<a class="button" href="">Couples Standings</a>
 	      
