--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/184622442460015/?active_tab=about">event page</a></p>
+        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament</p>
+        
+        <hr>
+        <h5>RIP 12</h5>  
+        <a class="button button-primary" href="https://www.facebook.com/events/555227465314486/">FB event page</a>
         <!-- <p></p> -->
+        
+        <hr>
+        <h5>RIP 11.5</h5>  
 
         <!-- Standard buttons -->
+        <a class="button button-primary" href="https://www.facebook.com/events/184622442460015/">FB event page</a>
+        <br><br>
+
         <a class="button button-primary" href="https://forms.gle/TNfbuEDAcsoDZ1WM6">Signups</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1a0jV1BJrFdVZ3_Hr6-Ran_OWO6hXh2ewLQmN9wKakYY/edit?usp=sharing">Schedule</a>
