--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="card-draw.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700|Pragati+Narrow:700">
+
         <script type="text/javascript" src="deps/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="card-draw.js"></script>
     </head>
@@ -13,7 +15,7 @@
         <div class="tool_bar">
             <div class="tool_group">
             <div class="title_card">
-                <img src="rip115web.svg" width="150px">
+                <img src="res/img/rip12.svg" width="150px">
             </div>
             <input id="draw5" type="submit" class="button" value="Draw 5">
             <input id="draw7" type="submit" class="button" value="Draw 7">
@@ -49,7 +51,7 @@
 
         <hr>
 
-        <div id="card-area">
+        <div id="card_area">
 
         </div>
 
