--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1fPYoMVaQAMYcw20Ko0KpPFS9VpXH9MgYgneqQv-yhvM/edit?usp=sharing">Schedule</a>
         <br><br>
 		
-        <a class="button button-primary" href="https://multistre.am/mutesauce/cartertheq/layout0/">Multistream</a>
-        <a class="button button-primary" href="https://twitch.tv/mutesauce">Upper Stream</a>
-	<a class="button" href="https://twitch.tv/">Middle Stream</a>
+        <a class="button button-primary" href="https://multistre.am/mutesaucethebrave/4panelunited/cartertheq/layout7/">Multistream</a>
+        <a class="button button-primary" href="https://twitch.tv/mutesaucethebrave">Upper Stream</a>
+	<a class="button button-primary" href="https://twitch.tv/4PanelUnited">Middle Stream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
         <br><br>
         <a class="button button-primary" href="https://challonge.com/wuk8xbg2">Upper DE Bracket</a>
