--- a/logo.html
+++ b/logo.html
@@ -35,7 +35,7 @@
       <div class="one-half column" style="margin-top: 10%">
         <h4>DDRIllini and RIP Logos</h4>
       		<p>todo add the rest of the tournaments</p>
-          <img style="max-width: 100%" src="logos/logo.png">
+          <img style="max-width: 100%" src="/logo/logo.png">
       </div>
     </div>
   </div>
