--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <!-- <p></p> -->
         
         <hr>
-        <h5>RIP 12</h5>  
+        <h5>RIP 12.1</h5>  
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://www.facebook.com/events/555227465314486/">FB event page</a>
+        <a class="button button-primary" href="https://www.facebook.com/events/1246467872532537">FB event page</a>
         <br><br>
 
-        <a class="button button-primary" href="https://forms.gle/6jR6AaZSHA4x75c57">Signups</a>
+        <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScPJeO9tDtA36BVIW6yiB9ZKDpF5Ay-17Rz56ACHcaMCE1PWA/viewform">Signups</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1fPYoMVaQAMYcw20Ko0KpPFS9VpXH9MgYgneqQv-yhvM/edit?usp=sharing">Schedule</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1ExoT-SZcFYXCI_mShg7CqxuCZp80YGw4ivo-u4laCIw/edit#gid=0">Schedule</a>
         <br><br>
 		
         <a class="button button-primary" href="https://multistre.am/mutesaucethebrave/4panelunited/cartertheq/layout7/">Multistream</a>
@@ -55,10 +55,10 @@
 	<a class="button button-primary" href="https://twitch.tv/4PanelUnited">Middle Stream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
         <br><br>
-        <a class="button button-primary" href="https://challonge.com/wuk8xbg2">Upper DE Bracket</a>
-	<a class="button button-primary" href="https://challonge.com/vcl9iipj">Middle DE Bracket</a>      
-	<a class="button button-primary" href="https://challonge.com/oevt64h2">Lower DE Bracket</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1eLetu3B15VM1aeCDeoCx63ovaeOAZSNtqmmBUKr2rjs/edit?usp=sharing">Qualifier/Singles Pools</a>
+        <a class="button" href="">Upper DE Bracket</a>
+	<a class="button" href="">Middle DE Bracket</a>      
+	<a class="button" href="">Lower DE Bracket</a>
+	<a class="button" href="">Qualifier/Singles Pools</a>
 <br>
 	<a class="button" href="">Mods SRT Score Sheet</a>
 	<a class="button" href="">Mods SRT Bracket</a>
@@ -70,9 +70,9 @@
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
 	<br><br>
 
-        <a class="button button-primary" href="https://www.dropbox.com/s/bmssomc5l3e3hap/RIP12%20Qualifiers.zip?dl=0">Qualifier DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/exemzao0tw11y7h/RIP12.zip?dl=0">Singles DL</a>
-        <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v8.zip?fbclid=IwAR1Lpp38jHXGwEGvZyVRwGzubPEiSlaBU6QmI9FMBbRWZbCHWuVM2TRQHdU">Doubles DL</a>
+        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1eFDRCdCCdlSlSpbu-sa8dMDVuOq6CiZI?usp=sharing">Singles DL</a>
+        <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v9.zip">Doubles DL</a>
 	<a class="button button-primary" href="https://docs.google.com/document/d/1oxFwdpi5thEKTAn51FUkupM6DJTxybB8bLET4pE9XIM/edit?usp=sharing">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 	<br><br>
