--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
 	<br><br>
 
-        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1w-nKIBASErg6uJTxOTjuQXpAlwq_UBIs?usp=sharing">Qualifier DL</a>
         <a class="button button-primary" href="https://drive.google.com/drive/folders/1eFDRCdCCdlSlSpbu-sa8dMDVuOq6CiZI?usp=sharing">Singles DL</a>
         <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v9.zip">Doubles DL</a>
-	<a class="button button-primary" href="https://docs.google.com/document/d/1oxFwdpi5thEKTAn51FUkupM6DJTxybB8bLET4pE9XIM/edit?usp=sharing">Singles Rules</a>
+	    <a class="button button-primary" href="https://docs.google.com/document/d/1O_g37XHXP1WGNI-gk75pur8Mj8NErvx9KbKbi81QWlg/edit?usp=sharing">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 	<br><br>
       </div>
