--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -12,6 +12,19 @@
         <script type="text/javascript" src="card-draw.js"></script>
     </head>
     <body>
+        <div class="page">
+        <div class="sidebar">
+            <div class="sidebar_info">
+                <div>Song List (for streaming)</div>
+                <div>
+                    <label>
+                        <input id="hide_vetoed" name="hide_vetoed" type="checkbox" unchecked> Hide vetoed songs
+                    </label>
+                </div>
+            </div>
+            <div id="sidebar_card_area"></div>
+        </div>
+        <div class="main">
         <div class="tool_bar">
             <div class="tool_group">
             <div class="title_card">
@@ -19,6 +32,7 @@
             </div>
             <input id="draw5" type="submit" class="button" value="Draw 5">
             <input id="draw7" type="submit" class="button" value="Draw 7">
+            <input id="draw3" type="submit" class="button" value="Draw 3 (Ties)">
             <div class="options">
                 <div>
                     <label>
@@ -45,7 +59,7 @@
                 <input id="undo" type="submit" class="button" value="Undo">
                 <input id="redo" type="submit" class="button" value="Redo">
 
-                <input id="submit" type="submit" class="button" value="Send">
+                <!--<input id="submit" type="submit" class="button" value="Send">-->
             </div>
         </div>
 
@@ -53,6 +67,8 @@
 
         <div id="card_area">
 
+        </div>
+        </div>
         </div>
 
     </body>
