--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
         <!-- <p></p> -->
         
         <hr>
-        <h5>RIP 12.1</h5>  
+        <h5>RIP 12.5</h5>  
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://www.facebook.com/events/1246467872532537">FB event page</a>
+        <a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-12-5/details">Start.gg Event Page</a>
         <br><br>
 
-        <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScPJeO9tDtA36BVIW6yiB9ZKDpF5Ay-17Rz56ACHcaMCE1PWA/viewform">Signups</a>
+        <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord Server</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1ExoT-SZcFYXCI_mShg7CqxuCZp80YGw4ivo-u4laCIw/edit#gid=0">Schedule</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1GXYTS_758lUPHVGITCFmInFBmgrrXX2CnzTD09UtAkI/edit?usp=sharing">Schedule</a>
         <br><br>
 		
         <a class="button button-primary" href="https://multistre.am/mutesaucethebrave/4panelunited/cartertheq/layout7/">Multistream</a>
-        <a class="button button-primary" href="https://twitch.tv/mutesaucethebrave">Upper Stream</a>
-	<a class="button button-primary" href="https://twitch.tv/4PanelUnited">Middle Stream</a>
-        <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
+	<a class="button button-primary" href="https://twitch.tv/justalegitgamer">Middle Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/Kerpa100">Lower Stream</a>
         <br><br>
         <a class="button" href="">Upper DE Bracket</a>
 	<a class="button" href="">Middle DE Bracket</a>      
@@ -70,11 +70,11 @@
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
 	<br><br>
 
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1w-nKIBASErg6uJTxOTjuQXpAlwq_UBIs?usp=sharing">Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1eFDRCdCCdlSlSpbu-sa8dMDVuOq6CiZI?usp=sharing">Singles DL</a>
-        <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v9.zip">Doubles DL</a>
-	    <a class="button button-primary" href="https://docs.google.com/document/d/1O_g37XHXP1WGNI-gk75pur8Mj8NErvx9KbKbi81QWlg/edit?usp=sharing">Singles Rules</a>
-        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1d-amnIP26FL4yq4T9BIo8Q1DNjBJFN4v?usp=sharing">Singles Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1p3yO2EQ0--SqB0VU9fnvsLJwS61nRIfk?usp=sharing">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1Wo28QL8TfdEZBGrFsE0b4k8yU7tgcirj/view?usp=sharing">Doubles DL</a>
+	    <a class="button button-primary" href="https://docs.google.com/document/d/1JdWvgi3pOIHMapud2UglMFOK3udJwDW18eASNAdyFq0/edit?usp=sharing">Singles Rules</a>
+        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/">Doubles Rules</a>
 	<br><br>
       </div>
     </div>
