add description in hopes that it makes the discord embed better

--- a/media/index.html
+++ b/media/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>RIP Media</title>
-<meta name="description" content="">
+<meta name="description" content="Compilation of links to photos from Rumble in the Prairie, an ITG tournament series hosted by DDRIllini">
 <meta name="author" content="compiled by DDRIllini">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
