--- a/media/index.html
+++ b/media/index.html
@@ -30,8 +30,8 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <h5><span title="new tunes">RIP 12.5</span> <small>2022-11</small></h5>
 <ul>
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">DDRIllini Discord® server, photos channel</a>, assorted</li>
-<li><a href="gp://XU9NUGpICghTTnoMaX9Oewo=">Mallow</a></li>
-<li>Solus: <em>coming soon</em></li>
+<li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
+<li>Solus: <a href="gd://D3VwCG92bXJXbBAMZmtoSVlnWHhIVG52EGpNVgkJSVBy">photos (batch 0)</a></li>
 </ul>
 
 <h5>Older Events</h5>
@@ -44,6 +44,7 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <li><a href="gp://V2t+R1VRV0h8f0sJB0hrXwc=">RIP 11, Mallow</a></li>
 <li><a href="gp://bE5STHtdfG18XktebHh+Ugg=">RIP 10, quietly-turning</a></li>
 <li><a href="gp://XU4PXH5TB111eGpoewx4Wn8=">RIP 9, quietly-turning</a></li>
+<li><a href="gp://aAdzTH9mW2hmCXhraV9QZwk=">RIP 8.5, quietly-turning</a></li>
 <li><a href="gp://DUoORkx8DQwKbmhmZlAKUgk=">RIP 7.5, quietly-turning</a></li>
 <li><a href="gp://ZlFvWnJ7b2cHDA1reGdKbwk=">RIP 5.5 <small>2013-11</small>, quietly-turning</a></li>
 </ul>
