--- a/index.html
+++ b/index.html
@@ -33,34 +33,41 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4 style="display:inline">RIP 12.5</h4> <p>uiuc dance game tournament</p>
+        <h4 style="display:inline">RIP 13</h4> <p>uiuc dance game tournament</p>
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-12-5/details">Start.gg Event Page</a>
+        <a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13/details">Start.gg Event Page</a>
         <br><br>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord Server</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1GXYTS_758lUPHVGITCFmInFBmgrrXX2CnzTD09UtAkI/edit?usp=sharing">Schedule</a>
-        <br><br>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1UC8KKPGDT02Z3A3jVpLbTA72j47gGDDFTdn9lB0jhF0/edit">Schedule</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1Z2KCnEKXz-JWK5mxWvuL0dQ3iZFIaTnzXikLsy02FbA/edit#gid=0">Seeding</a>
 		
+        <h6>Streams</h6>
         <a class="button button-primary" href="https://multistre.am/cartertheq/justalegitgamer/Kerpa100/layout7/">Multistream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
-	<a class="button button-primary" href="https://twitch.tv/justalegitgamer">Middle Stream</a>
+	    <a class="button button-primary" href="https://twitch.tv/justalegitgamer">Middle Stream</a>
         <a class="button button-primary" href="https://twitch.tv/Kerpa100">Lower Stream</a>
-        <br><br>
 
+        <h6>Forms</h6>
+        <a class="button button-primary" href="https://forms.gle/z5y3YS3XvSwBpcu47">Profile Submission/Score Info</a>
+        <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdlS1dP1nafkYo-wjjpwVZoljYzzowZCEL-JdxpqhPKoGiN6g/viewform?usp=sharing">Volunteer/Hardware</a>
+        <a class="button button-primary" href="https://forms.gle/kySriRz56wrLdhwm7">Pocket Pick</a>
+
+        <h6>Downloads</h6>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1VSZeiwW-TsHw0Zx8b60zQNs-hFDZTPhH/">Singles Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1BZVYfzCsVGWRdPXrbWJrKdXeKRm-77z5?usp=share_link">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/17FXV4NhUoIWFPpxsG5aLC77xwm6l37po/view?usp=sharing">Doubles DL</a>
+
+        <h6>Rules</h6>
+	    <a class="button button-primary" href="https://docs.google.com/document/d/1yTM8MYDR7rDj75VGnocPfEsNlJqqPyRV-8cFTfvESJY">Singles Rules</a>
+        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
+
+        <h6>Miscellaneous</h6>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
-	<br><br>
-
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1d-amnIP26FL4yq4T9BIo8Q1DNjBJFN4v?usp=sharing">Singles Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1p3yO2EQ0--SqB0VU9fnvsLJwS61nRIfk?usp=sharing">Singles DL</a>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1Wo28QL8TfdEZBGrFsE0b4k8yU7tgcirj/view?usp=sharing">Doubles DL</a>
-	    <a class="button button-primary" href="https://docs.google.com/document/d/1JdWvgi3pOIHMapud2UglMFOK3udJwDW18eASNAdyFq0/edit?usp=sharing">Singles Rules</a>
-        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/">Doubles Rules</a>
-	<br><br>
       </div>
     </div>
   </div>
