--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 10%">
+      <div class="one-half column" style="margin-top: 4%">
         <h4 style="display:inline">RIP 13</h4> <p>uiuc dance game tournament</p>
 
         <!-- Standard buttons -->
@@ -59,12 +59,14 @@
         <a class="button button-primary" href="https://drive.google.com/file/d/1VSZeiwW-TsHw0Zx8b60zQNs-hFDZTPhH/">Singles Qualifier DL</a>
         <a class="button button-primary" href="https://drive.google.com/drive/folders/1BZVYfzCsVGWRdPXrbWJrKdXeKRm-77z5?usp=share_link">Singles DL</a>
         <a class="button button-primary" href="https://drive.google.com/file/d/17FXV4NhUoIWFPpxsG5aLC77xwm6l37po/view?usp=sharing">Doubles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1p0hNy4E7QmsQxpbDFwxkSXrmR_TavPxC/view?usp=sharing">Warmup Pack</a>
 
         <h6>Rules</h6>
 	    <a class="button button-primary" href="https://docs.google.com/document/d/1yTM8MYDR7rDj75VGnocPfEsNlJqqPyRV-8cFTfvESJY">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 
         <h6>Miscellaneous</h6>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/12JKSc7LMh6ImvB0BXLIvmgPwh8J8pF5UN5EqsNIOrMw/edit?usp=sharing">Pancakes</a>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
