pack video playlists, save streams for later

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1Z2KCnEKXz-JWK5mxWvuL0dQ3iZFIaTnzXikLsy02FbA/edit#gid=0">Seeding</a>
 		
         <h6>Streams</h6>
-        <a class="button button-primary" href="https://multistre.am/cartertheq/justalegitgamer/Kerpa100/layout7/">Multistream</a>
-        <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
-	    <a class="button button-primary" href="https://twitch.tv/justalegitgamer">Middle Stream</a>
-        <a class="button button-primary" href="https://twitch.tv/Kerpa100">Lower Stream</a>
+        <a class="button" href="">Multistream</a>
+        <a class="button" href="">Upper Stream</a>
+	    <a class="button" href="">Middle Stream</a>
+        <a class="button" href="">Lower Stream</a>
 
         <h6>Forms</h6>
         <a class="button button-primary" href="https://forms.gle/z5y3YS3XvSwBpcu47">Profile Submission/Score Info</a>
@@ -65,8 +65,11 @@
 	    <a class="button button-primary" href="https://docs.google.com/document/d/1yTM8MYDR7rDj75VGnocPfEsNlJqqPyRV-8cFTfvESJY">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 
+        <h6>Pack Video Playlists</h6>
+        <a class="button button-primary" href="https://youtube.com/playlist?list=PL2ichI4mEwGsKMFUMOlyTmh2xdFR24teO">Singles</a>
+        <a class="button button-primary" href="https://youtube.com/playlist?list=PL2ichI4mEwGvqHdoqCzXE0oJyOcVzKy64">Doubles</a>
+
         <h6>Miscellaneous</h6>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/12JKSc7LMh6ImvB0BXLIvmgPwh8J8pF5UN5EqsNIOrMw/edit?usp=sharing">Pancakes</a>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
