--- a/index.html
+++ b/index.html
@@ -44,12 +44,24 @@
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1UC8KKPGDT02Z3A3jVpLbTA72j47gGDDFTdn9lB0jhF0/edit">Schedule</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1Z2KCnEKXz-JWK5mxWvuL0dQ3iZFIaTnzXikLsy02FbA/edit#gid=0">Seeding</a>
 		
-        <h6>Streams</h6>
-        <a class="button" href="">Multistream</a>
-        <a class="button" href="">Upper Stream</a>
-	    <a class="button" href="">Middle Stream</a>
-        <a class="button" href="">Lower Stream</a>
-
+        <h6>Singles Streams</h6>
+        <a class="button button-primary" href="https://www.multitwitch.tv/bromid/cartertheq/vincentitg/talkion_">Multistream</a>
+        <a class="button button-primary" href="https://www.twitch.tv/bromid">Stream A</a>
+	    <a class="button button-primary" href="https://www.twitch.tv/cartertheq">Stream B</a>
+        <a class="button button-primary" href="https://www.twitch.tv/vincentitg">Stream C</a>
+	      <a class="button button-primary" href="https://www.twitch.tv/talkion_">Stream D</a>
+	      
+	<h6>Other Streams</h6>
+	<a class="button button-primary" href="https://www.multitwitch.tv/spootybiscuit/cartertheq">Couples Multistream</a>
+        <a class="button button-primary" href="https://www.twitch.tv/spootybiscuit">Couples Stream A</a>
+	    <a class="button button-primary" href="https://www.twitch.tv/cartertheq">Couples Stream B</a>
+	<a class="button button-primary" href="https://www.multitwitch.tv/sudzi/cartertheq">Doubles Multistream</a>
+        <a class="button button-primary" href="https://www.twitch.tv/spootybiscuit">Doubles Stream A</a>
+	    <a class="button button-primary" href="https://www.twitch.tv/cartertheq">Doubles Stream B</a>
+	<a class="button button-primary" href="https://www.multitwitch.tv/bromid/talkion_">Tech SRT Multistream</a>
+        <a class="button button-primary" href="https://www.twitch.tv/bromid">Tech SRT Stream A</a>
+	    <a class="button button-primary" href="https://www.twitch.tv/talkion_">Tech SRT Stream B</a>
+	      
         <h6>Forms</h6>
         <a class="button button-primary" href="https://forms.gle/z5y3YS3XvSwBpcu47">Profile Submission/Score Info</a>
         <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdlS1dP1nafkYo-wjjpwVZoljYzzowZCEL-JdxpqhPKoGiN6g/viewform?usp=sharing">Volunteer/Hardware</a>
