--- a/food.html
+++ b/food.html
@@ -14,7 +14,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -39,7 +39,7 @@
           <h5>Close (~Green Street)</h5>
             <s>Wendy's</s> Garbanzo's — unofficial sponsor of DDRIllini<br>
             Cravings — Insanely close. Notorious. Beloved. Not open on Sunday. Tom's favorite <br>
-            Spicy Tang — Naohiro's favorite, mostly dry & soupy hot pot<br>
+            Spicy Tang — Naohiro's favorite, mostly dry &amp; soupy hot pot<br>
             Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
             Paris Super — Thai ice cream and ice cream crepes. Close contender for best ice cream. <br>
             Ozu Ramen — StoryTime/Kristian's favorite <br>
