--- a/media/index.html
+++ b/media/index.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/png" href="/favicon.ico">
 
 <!-- no me gusta but it's easier to be consistent with the rest of the site -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/normalize.css">
 <link rel="stylesheet" href="/css/skeleton.css">
 <script type="text/javascript" src="test.js"></script>
