--- a/media/index.html
+++ b/media/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<div class="container" style="margin-top:1em;">
+<div class="container" style="margin-top:1em; max-width=30em;">
 <!-- Andrew/Solus appreciates your recommendations for
 better _static_ gallery generation SW and scripting darktable export to webpage.
 Google sucks -->
@@ -26,6 +26,11 @@ Google sucks -->
 <p id="noscript-warning" style="background:repeating-linear-gradient(45deg, #f002, #f002 0.69em, #f004 0.69em, #f004 1.38em); padding:0.69em; border:solid #f00 1px;">
 The global script is not loaded. You can deobfuscate links with the utilities in the source code of <a href="./test.js"><tt>test.js</tt></a>.</p>
 <p>Most links to Google Photos® directories</p>
+
+<h5><span title="new tunes">RIP 13</span> <small>2023-03</small></h5>
+<ul>
+<li>coming soon&mldr;</li>
+</ul>
 
 <h5><span title="new tunes">RIP 12.5</span> <small>2022-11</small></h5>
 <ul>
