--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>RIP</title>
-<meta name="description" content="Rumble in the Prairie 13 is happening now! This twice-annual tournamment series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. ">
+<meta name="description" content="Rumble in the Prairie 13 is happening now! This twice-annual tournament series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. ">
 <meta name="author" content="DDRIllini">
 
   <!-- Mobile Specific Metas
