--- a/media/index.html
+++ b/media/index.html
@@ -37,6 +37,7 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">DDRIllini Discord® server, photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
 <li>Solus: <a href="gd://D3VwCG92bXJXbBAMZmtoSVlnWHhIVG52EGpNVgkJSVBy">photos (batch 0)</a></li>
+<li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
 </ul>
 
 <h5>Older Events</h5>
