correct joke oversight: RIP 12.5 is not the latest RIP

--- a/media/index.html
+++ b/media/index.html
@@ -32,7 +32,7 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <li>coming soon&mldr;</li>
 </ul>
 
-<h5><span title="new tunes">RIP 12.5</span> <small>2022-11</small></h5>
+<h5>RIP 12.5 <small>2022-11</small></h5>
 <ul>
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">DDRIllini Discord® server, photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
