ft. load-bearing penny

--- a/media/index.html
+++ b/media/index.html
@@ -29,7 +29,8 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 
 <h5><span title="new tunes">RIP 13</span> <small>2023-03</small></h5>
 <ul>
-<li>coming soon&mldr;</li>
+<li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">DDRIllini Discord® server, photos channel</a>, assorted</li>
+<li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
 </ul>
 
 <h5>RIP 12.5 <small>2022-11</small></h5>
