media: fix (some) W3C validator issus
It still complains about "CSS: max-width: Parse Error",
and I do not have time to fix that right now

--- a/media/index.html
+++ b/media/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="Compilation of links to photos from Rumble in the Prairie, an ITG tournament series hosted by DDRIllini">
 <meta name="author" content="compiled by DDRIllini">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="referrer" content="same-origin">
 
 <link rel="icon" type="image/png" href="/favicon.ico">
 
@@ -13,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/normalize.css">
 <link rel="stylesheet" href="/css/skeleton.css">
-<script type="text/javascript" src="test.js"></script>
+<script src="test.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@ Google sucks -->
 <h3>RIP Media Compilation</h3>
 <!-- this is an atrocious way to check noscript, and to style this -->
 <p id="noscript-warning" style="background:repeating-linear-gradient(45deg, #f002, #f002 0.69em, #f004 0.69em, #f004 1.38em); padding:0.69em; border:solid #f00 1px;">
-The global script is not loaded. You can deobfuscate links with the utilities in the source code of <a href="./test.js"><tt>test.js</tt></a>.</p>
+The global script is not loaded. Deobfuscate links using the source code at <a href="./test.js"><code>test.js</code></a>.</p>
 <p>Most links to Google Photos® directories</p>
 
 <h5><span title="new tunes">RIP 13</span> <small>2023-03</small></h5>
@@ -45,7 +46,7 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <ul>
 <li><a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">RIP 12.1 <small>2022-03</small>, PSU collab.</a></li>
 </ul>
-<p style="font-size:90%;">RIP 12 would have occurred in 2020-03, <br /> but was cancelled due to the COVID-19 pandemic, <br /> two days before it would have started.</p>
+<p style="font-size:90%;">RIP 12 would have occurred in 2020-03, <br> but was cancelled due to the COVID-19 pandemic, <br> two days before it would have started.</p>
 <ul>
 <li><a href="gp://X1oMcnxVSVh9Zn9sD2p4Cwk=">RIP 11.5 <small>2019-11</small>, Mallow</a></li>
 <li><a href="gp://V2t+R1VRV0h8f0sJB0hrXwc=">RIP 11, Mallow</a></li>
@@ -56,7 +57,7 @@ The global script is not loaded. You can deobfuscate links with the utilities in
 <li><a href="gp://ZlFvWnJ7b2cHDA1reGdKbwk=">RIP 5.5 <small>2013-11</small>, quietly-turning</a></li>
 </ul>
 
-<hr />
+<hr>
 <p>Thank you.</p>
 
 </div>
