more media entries + misc cleanup
everybody sing along

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
+        <br>
+        <a class="button button-primary" href="media/">media</a>
       </div>
     </div>
   </div>
