--- a/media/index.html
+++ b/media/index.html
@@ -19,11 +19,8 @@
 
 <body>
 <div class="container" style="margin-top:1em; max-width=30em;">
-<!-- Andrew/Solus appreciates your recommendations for
-better _static_ gallery generation SW and scripting darktable export to webpage.
-Google sucks -->
 <h3>RIP Media Compilation</h3>
-<!-- this is an atrocious way to check noscript, and to style this -->
+<!-- UI flash risk, but check that scripts worked is chicken/egg? -->
 <p id="noscript-warning" style="background:repeating-linear-gradient(45deg, #f002, #f002 0.69em, #f004 0.69em, #f004 1.38em); padding:0.69em; border:solid #f00 1px;">
 The global script is not loaded. Deobfuscate links using the source code at <a href="./test.js"><code>test.js</code></a>.</p>
 <p>Most links to Google Photos® directories</p>
@@ -32,6 +29,8 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <ul>
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">DDRIllini Discord® server, photos channel</a>, assorted</li>
 <li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
+<li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
+<li>Mallow: <a href="gp://CEtRfkpfC25rUXJzD3tKDwg=">photos</a></li>
 </ul>
 
 <h5>RIP 12.5 <small>2022-11</small></h5>
