fix solus photos to use new server

--- a/media/index.html
+++ b/media/index.html
@@ -31,13 +31,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
 <li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
 <li>Mallow: <a href="gp://CEtRfkpfC25rUXJzD3tKDwg=">photos</a></li>
+<li>Solus: <a href="stw://TldQEw8NExMR">photos</a></li>
 </ul>
 
 <h5>RIP 12.5 <small>2022-11</small></h5>
 <ul>
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">DDRIllini Discord® server, photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
-<li>Solus: <a href="gd://D3VwCG92bXJXbBAMZmtoSVlnWHhIVG52EGpNVgkJSVBy">photos (batch 0)</a></li>
+<li>Solus: <a href="stw://TldQEw8OEwsR">photos</a></li>
 <li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
 </ul>
 
