--- a/media/index.html
+++ b/media/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<div class="container" style="margin-top:1em; max-width=30em;">
+<div class="container" style="margin-top:1em; max-width:40em;">
 <h3>RIP Media Compilation</h3>
 <!-- UI flash risk, but check that scripts worked is chicken/egg? -->
 <p id="noscript-warning" style="background:repeating-linear-gradient(45deg, #f002, #f002 0.69em, #f004 0.69em, #f004 1.38em); padding:0.69em; border:solid #f00 1px;">
