--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>RIP</title>
-<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. ">
+  <title>RIP 13.5</title>
+<meta name="description" content="Rumble in the Prairie 13.5 will be November 17–19, 2023! This twice-annual tournament series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. ">
 <meta name="author" content="DDRIllini">
 
   <!-- Mobile Specific Metas
@@ -33,10 +33,10 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
-        <h4 style="display:inline">RIP 13</h4> <p>uiuc dance game tournament</p>
+        <h4 style="display:inline">RIP 13.5</h4> <p>uiuc dance game tournament</p>
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13/details">Start.gg Event Page</a>
+        <a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13-5/details">Start.gg Event Page</a>
         <br><br>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord Server</a>
@@ -71,7 +71,7 @@
 	      
         <h6>Forms</h6>
         <a class="button button-primary" href="https://forms.gle/z5y3YS3XvSwBpcu47">Profile Submission/Score Info</a>
-        <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdlS1dP1nafkYo-wjjpwVZoljYzzowZCEL-JdxpqhPKoGiN6g/viewform?usp=sharing">Volunteer/Hardware</a>
+        <a class="button button-primary" href="https://forms.gle/H9e1LmXo1L84Uc1U9">Volunteer/Hardware</a>
         <a class="button button-primary" href="https://forms.gle/kySriRz56wrLdhwm7">Pocket Pick</a>
 
         <h6>Downloads</h6>
