--- a/index.html
+++ b/index.html
@@ -40,18 +40,14 @@
         <a class="button button-primary" href="https://forms.gle/kySriRz56wrLdhwm7">Pocket Pick</a>
 
         <h6>Downloads</h6>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1VSZeiwW-TsHw0Zx8b60zQNs-hFDZTPhH/">Singles Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1BZVYfzCsVGWRdPXrbWJrKdXeKRm-77z5?usp=share_link">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1ZSbThyLzZP_eY9jTOpFK6Worf7F7yE1W/view?usp=sharing">Singles Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/19AWRohZpuAhCdV3Nk6YIZMaV0QgHZP7Y/view?usp=sharing">Singles DL</a>
         <a class="button button-primary" href="https://drive.google.com/file/d/17FXV4NhUoIWFPpxsG5aLC77xwm6l37po/view?usp=sharing">Doubles DL</a>
         <a class="button button-primary" href="https://drive.google.com/file/d/1p0hNy4E7QmsQxpbDFwxkSXrmR_TavPxC/view?usp=sharing">Warmup Pack</a>
 
         <h6>Rules</h6>
 	    <a class="button button-primary" href="https://docs.google.com/document/d/1yTM8MYDR7rDj75VGnocPfEsNlJqqPyRV-8cFTfvESJY">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
-
-        <h6>Pack Video Playlists</h6>
-        <a class="button button-primary" href="https://youtube.com/playlist?list=PL2ichI4mEwGsKMFUMOlyTmh2xdFR24teO">Singles</a>
-        <a class="button button-primary" href="https://youtube.com/playlist?list=PL2ichI4mEwGvqHdoqCzXE0oJyOcVzKy64">Doubles</a>
 
         <h6>Miscellaneous</h6>
         <a class="button button-primary" href="food.html">food!</a>
