--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="button button-primary" href="https://drive.google.com/file/d/1p0hNy4E7QmsQxpbDFwxkSXrmR_TavPxC/view?usp=sharing">Warmup Pack</a>
 
         <h6>Rules</h6>
-	    <a class="button button-primary" href="https://docs.google.com/document/d/1yTM8MYDR7rDj75VGnocPfEsNlJqqPyRV-8cFTfvESJY">Singles Rules</a>
+		<a class="button button-primary" href="https://docs.google.com/document/d/1BmqCZ4VY-RKNIb-JqNcDkbbes8hwm27MuG31SYsQYEg/edit?usp=sharing">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 
         <h6>Miscellaneous</h6>
