--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         <h6>Forms</h6>
         <a class="button button-primary" href="https://forms.gle/z5y3YS3XvSwBpcu47">Profile Submission/Score Info</a>
         <a class="button button-primary" href="https://forms.gle/H9e1LmXo1L84Uc1U9">Volunteer/Hardware</a>
-        <a class="button button-primary" href="https://forms.gle/kySriRz56wrLdhwm7">Pocket Pick</a>
 
         <h6>Downloads</h6>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1ZSbThyLzZP_eY9jTOpFK6Worf7F7yE1W/view?usp=sharing">Singles Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/file/d/19AWRohZpuAhCdV3Nk6YIZMaV0QgHZP7Y/view?usp=sharing">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1ZSbThyLzZP_eY9jTOpFK6Worf7F7yE1W/view">Singles Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/drive/folders/1HyW70R0z-PlQmkj-C8JJHdJIRLKDuuDS">Singles DL</a>
         <a class="button button-primary" href="https://drive.google.com/file/d/17FXV4NhUoIWFPpxsG5aLC77xwm6l37po/view?usp=sharing">Doubles DL</a>
         <a class="button button-primary" href="https://drive.google.com/file/d/1p0hNy4E7QmsQxpbDFwxkSXrmR_TavPxC/view?usp=sharing">Warmup Pack</a>
 
