added campustown options

--- a/food.html
+++ b/food.html
@@ -30,25 +30,35 @@
     <div class="row">
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Fooooooood</h4>
-        <p>Sorted roughly by distance</p>
+        <p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses. There should be plenty of options for your stay during RIP. See the local transportation page (coming soon!) for a description of the local area and transportation options).</p>
         <p>
-          <h5>Close (~Green Street)</h5>
-            <s>Wendy's</s> Garbanzo's — unofficial sponsor of DDRIllini<br>
-            Cravings — Insanely close. Notorious. Beloved. Not open on Sunday. Tom's favorite <br>
-            Spicy Tang — Naohiro's favorite, mostly dry &amp; soupy hot pot<br>
-            Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
-            Paris Super — Thai ice cream and ice cream crepes. Close contender for best ice cream. <br>
-            Ozu Ramen — StoryTime/Kristian's favorite <br>
-            Jip Bap — Korean bowls, extremely affordable for the amount of food, Benpai's favorite<br>
-            Spoon House — big serving of hot Korean food.<br>
-            Jerusalem Grill — Peter's favorite <br>
-            Legends — Bar, good burgers and beer specials on friday <br>
-	    Cracked - Open late, breakfast burritos, sandwiches, and tater tots <br>
-            Joes — Bar, good burgers<br>
-            Ambar India — Indian buffet. Great value given campus proximity<br>
-	    Signature Grill — It's like Indian Chipotle<br>
-	    Midsummer Lounge - Szechuan-style noodle and dumplings, big recommendation from Ben, tho a bit oily<br>
-            <br>
+          <h5>Campustown</h5>
+	  <h4>Distance from Illini Union: 15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h4>
+	  Mia Za's - Customizable pizza, pasta, and sandwiches.<br>
+	  Shawarma Joint - Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
+	  Midsummer Lounge - Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
+          Teamoji - Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
+	  Cocomero - Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
+	  Cravings - Chinese fast food. Great value for money.<br>
+	  Spoon House Korean Kitchen - Classic Korean dishes with some Korean-Mexican fusion options.<br>
+	  Latea Bubble Tea Lounge - Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
+	  Poke Lab - Build your own poke bowls.<br>
+	  GG Bowl (formerly Spicy Tang) - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
+	  Szechuan Taste - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
+	  Evo Cafe - Best Szechuan/Chengdu-style food in the area. Better to go with a group.<br>
+	  Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken.<br>
+	  Fat Sandwich Company - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
+	  Signature Grill - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
+	  Bangkok Thai Restaurant and Pho 911 - Classic Thai dishes and pho. Great value for money.<br>
+	  Sakanaya - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance.<br>
+	  Northern Cuisine - Amazing Chinese food from the northeastern (Dongbei) reagion. Better to go with a group.<br>
+	  Jurassic Grill - Typical burger joint with a hidden empanada menu.<br>
+	  Sushi Man - Good sushi restaurant. Better for takeout as there's not as much seating.<br>
+	  Naya Indian Cuisine - Really good northern style Indian food.<br>
+	  Moment Bakery - Chinese-style bakery with amazing pastries, breads, and cakes.<br>
+	  Tanaka Ramen and Izakaya - Decent ramen and other Japanese classics.<br>
+	  Maize Mexican Grill - A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
+	  <br>
           <h5>Medium — 5-10m walk</h5>
             Ko Fusion — ok sushi <br>
             Sakanaya — better sushi, pricey <br>
